--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 </head>
 
 <body>
-    <div class="navegador-paginas">
-        <div class="logo-principal-blanco col-12 col-md-3 ">
+    <div class="navegador">
+        <div class="navegador-logo col-12 col-md-3 ">
             <a href="../index.html" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
         </div>
-        <nav class="contenedor-nav-paginas col-3 col-md-6">
-            <div class="dropdown menu-ham-paginas d-block d-md-none">
+        <nav class="navegador-contenedor col-3 col-md-6">
+            <div class="dropdown navegador-menu d-block d-md-none">
                 <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     <img src="../multimedia/img/menu_hambueguesa.svg">
@@ -35,8 +35,8 @@
                     <li><a class="dropdown-item" href="./pages/nosotros.html">Nosotros</a></li>
                 </ul>
             </div>
-            <div class="ul-contenedor col-9 col-md-auto d-none d-md-flex">
-                <ul class="nav-lista">
+            <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
+                <ul class="navegador-ul-lista">
                     <!-- <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./Info.html">Info</a></li> -->
                     <li><a href="./pages/productos.html">Productos</a></li>
@@ -46,23 +46,23 @@
             </div>
         </nav>
 
-        <div class="iconos-del-nav col-12 col-md-3">
-            <div class="contendor-iconos-nav">
-                <button class="boton-icono-nav">
+        <div class="navegador-iconos col-12 col-md-3">
+            <div class="navegador-iconos-contenedor">
+                <button class="navegador-boton-icono">
                     <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
                 </button>
-                <button class="boton-icono-nav">
+                <button class="navegador-boton-icono">
                     <img src="../multimedia/img/🦆 icon _person_.svg" alt="">
                 </button>
-                <button class="boton-icono-nav">
+                <button class="navegador-boton-icono">
                     <img src="../multimedia/img/🦆 icon _shopping cart_.svg" alt="">
                 </button>
             </div>
         </div>
     </div>
     <div class="banner-promociones">
-        <p class="promociones-titulo"> Rebajas</p> 
-        <p class="promociones-titulo-numero">&nbsp;50%</p>
+        <p class="banner-promociones-titulo"> Rebajas</p> 
+        <p class="banner-promociones-titulo-numero">&nbsp;50%</p>
     </div>
 
     </header>
@@ -70,86 +70,86 @@
         <p>Envios gratis a partir de 30€ de pedido</p>
     </div>
     <main>
-        <div class="carrusel-de-productos container px-0">
-            <h2 class="titulo-de-secciones">ESPECIALES</h2>
-            <div class="contenedor-de-tarjetas">
+        <div class="contenedor-tarjetas container px-0">
+            <h2 class="contenedor-titulo-secciones">ESPECIALES</h2> 
+            <div class="contenedor-tarjetas-producto">
                 <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto mx-auto">
-                        <div class="imagen-principal-tarjeta">
+                    <div class="tarjeta-producto mx-auto">
+                        <div class="tarjeta-producto-imagen">
                             <img src="./multimedia/img/cafe-granos-01.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café Robusta</p>
-                            <p class="texto-tarjeta mb-0">El otro gran café no es otro que el Robusta, perteneciente a
+                            <p class="tarjeta-producto-titulo mb-0">Café Robusta</p>
+                            <p class="tarjeta-producto-texto mb-0">El otro gran café no es otro que el Robusta, perteneciente a
                                 la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor
                                 resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el
                                 cafeto Robusta puede cultivarse a partir de altitudes de solo 200 metros sobre el nivel
                                 del mar, a diferencia del arábica que se cultiva entre los 800 y los 2100 metros. </p>
-                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> República del
+                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span> República del
                                 Congo</p>
-                            <p class="texto-tarjeta-gramos mb-0">500gr</p>
+                            <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        <div class="botonchip-compra">
+                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 p-2">
                     <div class="tarjeta-de-producto mx-auto">
-                        <div class="imagen-principal-tarjeta">
+                        <div class="tarjeta-producto-imagen">
                             <img src="./multimedia/img/cafe-granos-02.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café Java</p>
-                            <p class="texto-tarjeta mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
+                            <p class="tarjeta-producto-titulo mb-0">Café Java</p>
+                            <p class="tarjeta-producto-texto mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
                                 cuando el país aún era una colonia holandesa. El particular clima y suelo del país da al
                                 café unas características muy marcadas, con una semilla que destaca por su fuerte sabor,
                                 con toques picantes y que deja una sensación de dulzor en el paladar.</p>
-                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Indonesia</p>
-                            <p class="texto-tarjeta-gramos mb-0">500gr</p>
+                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span> Indonesia</p>
+                            <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
                         <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto mx-auto">
-                        <div class="imagen-principal-tarjeta">
+                    <div class="tarjeta-producto mx-auto">
+                        <div class="tarjeta-producto-imagen">
                             <img src="./multimedia/img/cafe-granos-03.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café arábica</p>
-                            <p class="texto-tarjeta mb-0">La planta de café arábica es uno de los dos principales
+                            <p class="tarjeta-producto-titulo mb-0">Café arábica</p>
+                            <p class="tarjeta-producto-texto mb-0">La planta de café arábica es uno de los dos principales
                                 cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen
                                 en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades
                                 tienes de llevarte a los labios siempre que te tomes una taza.</p>
-                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Arabia Saudí
+                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span> Arabia Saudí
                             </p>
-                            <p class="texto-tarjeta-gramos mb-0">500gr</p>
+                            <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        <div class="botonchip-compra">
+                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto mx-auto">
-                        <div class="imagen-principal-tarjeta content">
+                    <div class="tarjeta-producto mx-auto">
+                        <div class="tarjeta-producto-imagen content">
                             <img src="./multimedia/img/cafe-granos-04.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café Tarrazú</p>
-                            <p class="texto-tarjeta mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
+                            <p class="tarjeta-producto-titulo mb-0">Café Tarrazú</p>
+                            <p class="tarjeta-producto-texto mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
                                 variedad arábica y tiene su origen en la zona montañosa y volcánica de Costa Rica,
                                 siendo una de las más apreciadas por los expertos cafeteros. Se trata de un café
                                 ligeramente ácido y con sabor parecido al del chocolate.</p>
-                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Costa Rica
+                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span> Costa Rica
                             </p>
-                            <p class="texto-tarjeta-gramos mb-0">500gr</p>
+                            <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        <div class="botonchip-compra">
+                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
                 </div>
@@ -158,59 +158,59 @@
             </div>
         </div>
 
-        <div class="carrusel-video-recetas container px-0 mx-auto">
+        <div class="contenedor-tarjeta container px-0 mx-auto">
             <h2 class="titulo-de-secciones">RECETAS</h2>
-            <div class="contenedor-tarjetas-recetas">
-                <div class=" contenedor-tarjetas col-12 col-md-4 p-2 ">
-                    <div class="tarjeta-de-receta mx-auto">
+            <div class="contenedor-tarjeta-receta">
+                <div class=" col-12 col-md-4 p-2 ">
+                    <div class="tarjeta-receta mx-auto">
                         <!-- <video width="320" height="240" controls>
                             <source src="https://res.cloudinary.com/elizapardo/video/upload/v1678816662/Web%20Kofe/production_ID_4378109_kotro2.mp4" type="video/mp4">
                           Your browser does not support the video tag.
                           </video> -->
-                        <div class="icono-circle-pay">
+                        <div class="tarjeta-receta-icono-play">
                             <img src="./multimedia/img/🦆 icon _play circle.png" alt="">
                         </div>
-                        <div class="imagen-tarjeta-recetas">
+                        <div class="tarjeta-receta-imagen">
                             <img src="./multimedia/img/receta-tarta.png" alt="">
-                            <p class="titulo-principal-tarjeta-recetas mb-0">Tarta de café</p>
+                            <p class="tarjeta-receta-titulo mb-0">Tarta de café</p>
                         </div>
-                        <div class="contenedor-nivel-de-dificultad-recetas">
-                            <p class="texto-tarjeta-2 mb-0">Dificultad:</p>
-                            <div class="imagen-nivel-de-receta">
+                        <div class="tarjeta-receta-dificultad">
+                            <p class="tarjeta-receta-dificultad-texto mb-0">Dificultad:</p>
+                            <div class="tarjeta-receta-dificultad-imagen">
                                 <img src="./multimedia/img/nivel_de_experiencia_01.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class=" contenedor-tarjetas col-12 col-md-4 p-2 ">
-                    <div class="tarjeta-de-receta mx-auto">
-                        <div class="icono-circle-pay">
+                <div class=" col-12 col-md-4 p-2 ">
+                    <div class="tarjeta-receta mx-auto">
+                        <div class="tarjeta-receta-icono-play">
                             <img src="./multimedia/img/🦆 icon _play circle.png" alt="">
                         </div>
-                        <div class="imagen-tarjeta-recetas ">
+                        <div class="tarjeta-receta-imagen ">
                             <img src="./multimedia/img/receta-tiramisu.png" alt="">
-                            <p class="titulo-principal-tarjeta-recetas mb-0">Tiramisú</p>
+                            <p class="tarjeta-receta-titulo mb-0">Tiramisú</p>
                         </div>
-                        <div class="contenedor-nivel-de-dificultad-recetas">
-                            <p class="texto-tarjeta-2 mb-0">Dificultad:</p>
-                            <div class="imagen-nivel-de-receta">
+                        <div class="tarjeta-receta-dificultad">
+                            <p class="tarjeta-receta-dificultad-texto mb-0">Dificultad:</p>
+                            <div class="tarjeta-receta-dificultad-imagen">
                                 <img src="./multimedia/img/nivel_de_experiencia_02.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class=" contenedor-tarjetas col-12 col-md-4 p-2 ">
-                    <div class="tarjeta-de-receta mx-auto">
-                        <div class="icono-circle-pay">
+                <div class=" col-12 col-md-4 p-2 ">
+                    <div class="tarjeta-receta mx-auto">
+                        <div class="tarjeta-receta-icono-play">
                             <img src="./multimedia/img/🦆 icon _play circle.png" alt="">
                         </div>
-                        <div class="imagen-tarjeta-recetas">
+                        <div class="tarjeta-receta-imagen">
                             <img src="./multimedia/img/receta-mantequilla.png" alt="">
-                            <p class="titulo-principal-tarjeta-recetas mb-0">Mantequilla de café</p>
+                            <p class="tarjeta-receta-titulo mb-0">Mantequilla de café</p>
                         </div>
-                        <div class="contenedor-nivel-de-dificultad-recetas">
-                            <p class="texto-tarjeta-2 mb-0">Dificultad:</p>
-                            <div class="imagen-nivel-de-receta">
+                        <div class="tarjeta-receta-dificultad">
+                            <p class="tarjeta-receta-dificultad-texto mb-0">Dificultad:</p>
+                            <div class="tarjeta-receta-dificultad-imagen">
                                 <img src="./multimedia/img/nivel_de_experiencia_03.png" alt="">
                             </div>
                         </div>
