--- a/pages/productos.html
+++ b/pages/productos.html
@@ -19,12 +19,12 @@
 
 <body>
     <header>
-        <div class="navegador-paginas">
-            <div class="logo-principal-blanco col-12 col-md-3 ">
+        <div class="navegador">
+            <div class="navegador-logo col-12 col-md-3 ">
                 <a href="../index.html" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
             </div>
-            <nav class="contenedor-nav-paginas col-3 col-md-6">
-                <div class="dropdown menu-ham-paginas d-block d-md-none">
+            <nav class="navegador-contenedor col-3 col-md-6">
+                <div class="dropdown navegador-menu d-block d-md-none">
                     <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         <img src="../multimedia/img/menu_hambueguesa.svg">
@@ -36,8 +36,8 @@
                         <li><a class="dropdown-item" href="./nosotros.html">Nosotros</a></li>
                     </ul>
                 </div>
-                <div class="ul-contenedor col-9 col-md-auto d-none d-md-flex">
-                    <ul class="nav-lista">
+                <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
+                    <ul class="navegador-ul-lista">
                         <li><a href="../index.html">Home</a></li>
                         <!-- <li><a href="./Info.html">Info</a></li> -->
                         <!-- <li><a href="../productos.html">Productos</a></li> -->
@@ -47,15 +47,15 @@
                 </div>
             </nav>
 
-            <div class="iconos-del-nav col-12 col-md-3">
-                <div class="contendor-iconos-nav">
-                    <button class="boton-icono-nav">
+            <div class="navegador-iconos col-12 col-md-3">
+                <div class="navegador-iconos-contenedor">
+                    <button class="navegador-boton-icono">
                         <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
                     </button>
-                    <button class="boton-icono-nav">
+                    <button class="navegador-boton-icono">
                         <img src="../multimedia/img/🦆 icon _person_.svg" alt="">
                     </button>
-                    <button class="boton-icono-nav">
+                    <button class="navegador-boton-icono">
                         <img src="../multimedia/img/🦆 icon _shopping cart_.svg" alt="">
                     </button>
                 </div>
@@ -68,15 +68,15 @@
 
 
     <main>
-        <div class="carrusel-de-productos container px-0 py-5">
-            <div class="contenedor-de-tarjetas">
+        <div class="contenedor-tarjetas container px-0 py-5">
+            <div class="contenedor-tarjetas-producto">
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto mx-auto">
-                        <div class="imagen-principal-tarjeta">
+                    <div class="tarjeta-producto mx-auto">
+                        <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/cafe-granos-01.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café Robusta</p>
+                            <p class="tarjeta-producto-titulo mb-0">Café Robusta</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
                             <p class="texto-tarjeta mb-0">El otro gran café no es otro que el Robusta, perteneciente a
                                 la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor
