edicion de sass en proyecto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="../multimedia/img/logo-mini-web.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./scss/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
@@ -46,8 +46,8 @@
             </div>
         </nav>
 
-        <div class="navegador-iconos col-12 col-md-3">
-            <div class="navegador-iconos-contenedor">
+        <div class="navegador-icono col-12 col-md-3">
+            <div class="navegador-icono-contenedor">
                 <button class="navegador-boton-icono">
                     <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
                 </button>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto mx-auto">
+                    <div class="tarjeta-producto mx-auto">
                         <div class="tarjeta-producto-imagen">
                             <img src="./multimedia/img/cafe-granos-02.png">
                         </div>
