--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <p>Envios gratis a partir de 30€ de pedido</p>
     </div>
     <main>
-        <div class="contenedor-tarjetas container px-0">
+        <div class="contenedor-tarjetamaestra container px-0">
             <h2 class="contenedor-titulo-secciones">ESPECIALES</h2> 
-            <div class="contenedor-tarjetas-producto">
+            <div class="contenedor-tarjeta-producto">
                 <div class="col-12 col-md-3 p-2">
                     <div class="tarjeta-producto mx-auto">
                         <div class="tarjeta-producto-imagen">
@@ -85,8 +85,7 @@
                                 resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el
                                 cafeto Robusta puede cultivarse a partir de altitudes de solo 200 metros sobre el nivel
                                 del mar, a diferencia del arábica que se cultiva entre los 800 y los 2100 metros. </p>
-                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span> República del
-                                Congo</p>
+                            <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span> El Congo</p>
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
                         <div class="botonchip-compra">
@@ -108,7 +107,7 @@
                             <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span> Indonesia</p>
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
-                        <div class="chip-contenedor">
+                        <div class="botonchip-compra">
                             <button class="botonchip-compra-icono">Añadir a la cesta</button>
                         </div>
                     </div>
@@ -154,7 +153,7 @@
                     </div>
                 </div>
 
-                <hr class="linea-horizontal-secciones">
+                <!-- <hr class="linea-horizontal-secciones"> -->
             </div>
         </div>
 
