--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
 
         <div class="contenedor-tarjeta container px-0 mx-auto">
-            <h2 class="titulo-de-secciones">RECETAS</h2>
+            <h2 class="contenedor-titulo-secciones">RECETAS</h2>
             <div class="contenedor-tarjeta-receta">
                 <div class=" col-12 col-md-4 p-2 ">
                     <div class="tarjeta-receta mx-auto">
